Update app2container.md